changement sur le domaine informatique

--- a/cv.html
+++ b/cv.html
@@ -65,7 +65,7 @@
                                 </p>
                             </div>
                                  <p>Maitrise des logiciels  Excel, PowerPoint, Word, Access.
-                                        Maitrise également du Html, Css, phP, MySQL, JavaScript et Langage C.
+                                        Maitrise également du Html, Css, phP,Sql,JavaScript et Langage C.
                                      </p>
 
                             </div>
